.opsera-pantry-pal/k8s/overlays/staging/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-pal-preview
  labels:
    app: pantry-pal
    tenant: opsera
spec:
  type: ClusterIP
  selector:
    app: pantry-pal
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
